--- a/Coffee.css
+++ b/Coffee.css
@@ -12,12 +12,12 @@
 :root{
 
   /* colors */
-  --White-color: #fff;
-  --Dark-color: #252525;
-  --Light-pink-color: #faf4f5;
-  --primary-color: hsl(348, 49%, 15%);
+  --White-color: #fffaf1;
+  --Dark-color: #140901;
+  --Light-color: #fff4df;
+  --primary-color: hsl(36, 100%, 10%);
   --secondary-color: #f3961c;
-  --medium-grey-color: #ccc;
+  --medium-color: #8a8989;
 
   /* Font-size */
   --font-size-s: 0.9rem;
@@ -210,7 +210,7 @@ header .navbar{
 
 .about-section{
   
-  background: var(--Light-pink-color);
+  background: var(--Light-color);
   padding: 300px 0 300px;
 
 } 
@@ -255,7 +255,7 @@ header .navbar{
 .about-section .social-link-list i{
   color: var(--primary-color);
   font-size: var(--font-size-l);
-  transition: 0.2 ease;
+  transition: 0.3s ease;
 }
 
 .about-section .social-link-list i:hover{
@@ -318,7 +318,7 @@ header .navbar{
 /* Testimonial section */
 
 .testimonial-section{
-  background: var(--Light-pink-color);
+  background: var(--Light-color);
   padding:220px 0 220px; ;
 }
 
@@ -376,6 +376,7 @@ header .navbar{
 
 .gallery-section{
   padding: 120px 0 120px;
+  background: var(--Light-color);
 }
 
 .gallery-section .section-content{
@@ -409,7 +410,7 @@ header .navbar{
 
  /* Contact section */
 .contact-section{
-  background: var(--Light-pink-color);
+  background: var(--Light-color);
   padding: 130px 0 130px;
 }
 
@@ -439,7 +440,7 @@ header .navbar{
   width: 100%;
   height: 50px;
   padding: 0 12px;
-  border: 2px solid var(--medium-grey-color);
+  border: 2px solid var(--medium-color);
   border-radius: var(--border-redius-s);
   background: var(--White-color);
   outline: none;
